# mnist-cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
apps/: train.cpp
include/tensor/: tensor.hpp
src/: tensor.cpp
tests/: grad_check.cpp
